added @Git Dist::Zilla plugin bundle

--- a/dist.ini
+++ b/dist.ini
@@ -25,6 +25,11 @@ repository.type = git
 repository.url = https://github.com/abraxxa/Message-Passing-Output-Search-Elasticsearch.git
 repository.web = https://github.com/abraxxa/Message-Passing-Output-Search-Elasticsearch
 
+[@Git]
+commit_msg  = version %v%n%n%c
+tag_format  = %v
+tag_message = %v
+
 [Prereqs]
 Message::Passing = 0.114
 Search::Elasticsearch = 1.10
