--- a/dist.ini
+++ b/dist.ini
@@ -29,9 +29,11 @@ tag_message = %v
 
 [Prereqs]
 Message::Passing = 0.114
-Search::Elasticsearch = 1.10
+Search::Elasticsearch::Async = 1.11
 Moo = 1.003001
 
 [Prereqs / TestRequires]
 Test::More = 0.98
 Test::Exception = 0.32
+Search::Elasticsearch = 1.11
+AnyEvent = 7.07
