fix missing es_version when using Search::Elasticsearch 5.02 (RT#121186)

--- a/dist.ini
+++ b/dist.ini
@@ -35,5 +35,6 @@ Moo = 1.003001
 [Prereqs / TestRequires]
 Test::More = 0.98
 Test::Exception = 0.32
-Search::Elasticsearch = 5.00
+Search::Elasticsearch = 5.02
 AnyEvent = 7.07
+File::Temp = 0.2304
