change Search::Elasticsearch::Async requirement
to ensure used version is installed because newer versions don't ship older
client modules

--- a/dist.ini
+++ b/dist.ini
@@ -29,7 +29,7 @@ tag_message = %v
 
 [Prereqs]
 Message::Passing = 0.114
-Search::Elasticsearch::Async = 6.00
+Search::Elasticsearch::Client::6_0::Async::Bulk = 6.00
 Moo = 1.003001
 
 [Prereqs / TestRequires]
