Added missing prereqs as suggested by CPANTS.

--- a/dist.ini
+++ b/dist.ini
@@ -31,6 +31,8 @@ tag_message = %v
 Message::Passing = 0.114
 Search::Elasticsearch::Client::6_0::Async::Bulk = 6.00
 Moo = 1.003001
+MooX::Types::MooseLike = 0
+Promises = 0
 
 [Prereqs / TestRequires]
 Test::More = 0.98
